--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,7 @@ footer .footer2 h4 {
  
 }
 footer .footer2 .form-box {
-  background: #101011;
+  background: #f5f5f5;
   padding: 20px 30px;
   margin-top: -60px;
 }
